# bloco-notas-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cache.py  crud.py  main.py  models.py  routes.py  schemas.py
app/services/: database.py
